# rust-pocket

./: Cargo.toml  README.md
.github/workflows/: verify.yml
examples/: add.rs  addurl.rs  auth.rs  modify.rs  retrieve.rs
src/: add.rs  auth.rs  client.rs  errors.rs  get.rs  headers.rs  lib.rs  send.rs  serialization.rs  utils.rs
